2013-12-13  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Foundation/NSArray.h,
	* Source/NSArray.m: Move -setValue:forKey: from NSMutableArray to
	NSArray.
	Patch by Marcian Lytwyn <marcian.lytwyn@advcsi.com>.

2013-12-07  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/Additions/Unicode.m (GSPrivateDefaultCStringEncoding):
	Use correct feature test for presence of ucnv functions.

2013-12-05  Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/Foundation/NSDictionary.h:
	* Source/NSDictionary.m:
	* Source/Additions/GCDictionary.m:
	* Source/Additions/GSInsensitiveDictionary.m:
	* Source/GSDictionary.m:
	Changed keys argument type to (const id <NSCopying>[]) in 
	-initWithObjects:forKeys:count: and +dictionaryWithObjects:forKeys:count:, 
	to follow the current Cocoa API.

2013-12-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURLCredential.m: ([-isEqual:]) needs to take the password
	and persistence into account, not just the username.

2013-11-29 Riccardo Mottola <rm@gnu.org>

	* Headers/ObjectiveC2/objc/runtime.h
	* Headers/Foundation/NSObjCRuntime.h
	Insert some kludge for PTR stuff on systems with fake C99
	compatible headers.

2013-11-26 Riccardo Mottola <rm@gnu.org>

	* Headers/GNUstepBase/GSConfig.h.in
	* configure.ac
	Detect broken PTR limits (notably solaris 8) and provide replacements

	* configure
	regenerated

2013-11-25 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GNUstepBase/GSConfig.h.in: temporarily redefine BOOL while
	including windows headers, so we don't get conflict between windows
	and objc booleans.
	* base.make.in:
	Add to CONFIG_SYSTEM_LIBS, CONFIG_SYSTEM_LIB_DIR, CONFIG_SYSTEM_INCL
	So that the libraries/headers used to build base are available for
	software using base.

2013-11-22 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m:
	Set errno to EAGAIN if TLS layer fails in a non-fatal way during
	read/write.
	Add more/better debug logging.

2013-11-20  Richard Frith-Macdonald <rfm@gnu.org>
